# BlenderSCAD

./: README.md  blenderscad_convert.py  pyproject.toml
addons/: blenderscad_toolbar.py
src/blenderscad/: __init__.py  colors.py  core.py  impexp.py  math.py  primitives.py  shapes.py
tests/: conftest.py  test_math.py
