[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blenderscad"
version = "0.1.0"
description = "Blender to OpenSCAD bridge"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.md"}

[project.urls]
Homepage = "https://github.com/miguelitoelgrande/BlenderSCAD"

[project.optional-dependencies]
dev = ["black", "ruff"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
